--- a/thermal_effectivepixel_area.ipynb
+++ b/thermal_effectivepixel_area.ipynb
@@ -332,7 +332,6 @@
     "    targetlat_rad_m = np.radians(lat_m); targetlon_rad_m = np.radians(lon_m)\n",
     "\n",
     "    # haversine dist calc, by polynya \n",
-    "    # (this is where I think we'll eventually need to loop through all 'targetlat/lon' in line?)\n",
     "    a_e = np.sin((targetlat_rad_e-modislat_rad)/2.0)**2 + \\\n",
     "        np.cos(modislat_rad) * np.cos(targetlat_rad_e) * np.sin((targetlon_rad_e-modislon_rad)/2.0)**2\n",
     "\n",
@@ -357,9 +356,9 @@
     "    middle_bounds = figure_bounds.where(distkm_m < dist_thresh_m, drop=True)\n",
     "\n",
     "    # ADD ERROR HERE\n",
-    "    # Define DN threshold and modis pixel size for optical imagery\n",
-    "    thresh = thresh; # might make this a DN ratio from 2 bands for more stable threshold later (less subject to seasonal variations, cloud effects, etc.)\n",
-    "    u_thresh = thresh - 1 #(making thresh smaller = area larger)\n",
+    "    # Define DN threshold and modis pixel size\n",
+    "    thresh = thresh; \n",
+    "    u_thresh = thresh - 1 \n",
     "    l_thresh = thresh + 1\n",
     "    pixelarea = pixelwidth*pixelheight; # in km2 #effective pixel now\n",
     "\n",
