--- a/thermal_effectivepixel_area.ipynb
+++ b/thermal_effectivepixel_area.ipynb
@@ -315,7 +315,7 @@
     "    \n",
     "    This version uses xarray instead od pd.Dataframe to make more effcicient'''\n",
     "\n",
-    "    # distance (radius) from point method [not radius from line yet]\n",
+    "    # distance (radius) from point method \n",
     "    # convert lat, lon to radians\n",
     "    # x, y center points polynya\n",
     "    lat_w = westpoint[0]; lon_w = westpoint[1]; # west polynya center lat, lon\n",
@@ -347,7 +347,7 @@
     "    distkm_w = earth_radius * 2 * np.arcsin(np.sqrt(a_w)) #km\n",
     "    distkm_m = earth_radius * 2 * np.arcsin(np.sqrt(a_m)) #km\n",
     "\n",
-    "    # will need diff dist thresh for each polynya, put in rough ones for now\n",
+    "    # will need diff dist thresh for each polynya\n",
     "    dist_thresh_e = 12 # km\n",
     "    dist_thresh_w = 12 # km\n",
     "    dist_thresh_m = 6.5 # km\n",
