--- a/visible_effectivepixel_area_.ipynb
+++ b/visible_effectivepixel_area_.ipynb
@@ -330,7 +330,7 @@
     "    \n",
     "    This version uses xarray instead of pd.Dataframe to make more efficient'''\n",
     "\n",
-    "    # distance (radius) from point method [not radius from line yet]\n",
+    "    # distance (radius) from point method \n",
     "    # convert lat, lon to radians\n",
     "    # x, y center points polynya\n",
     "    lat_w = westpoint[0]; lon_w = westpoint[1]; # west polynya center lat, lon\n",
@@ -347,7 +347,6 @@
     "    targetlat_rad_m = np.radians(lat_m); targetlon_rad_m = np.radians(lon_m)\n",
     "\n",
     "    # haversine dist calc, by polynya \n",
-    "    # (this is where I think we'll eventually need to loop through all 'targetlat/lon' in line?)\n",
     "    a_e = np.sin((targetlat_rad_e-modislat_rad)/2.0)**2 + \\\n",
     "        np.cos(modislat_rad) * np.cos(targetlat_rad_e) * np.sin((targetlon_rad_e-modislon_rad)/2.0)**2\n",
     "\n",
@@ -363,7 +362,7 @@
     "    distkm_w = earth_radius * 2 * np.arcsin(np.sqrt(a_w)) #km\n",
     "    distkm_m = earth_radius * 2 * np.arcsin(np.sqrt(a_m)) #km\n",
     "\n",
-    "    # will need diff dist thresh for each polynya, put in rough ones for now\n",
+    "    # will need diff dist thresh for each polynya\n",
     "    dist_thresh_e = 12 # km\n",
     "    dist_thresh_w = 12 # km\n",
     "    dist_thresh_m = 6.5 # km\n",
@@ -373,7 +372,7 @@
     "\n",
     "    # ADD ERROR HERE\n",
     "    # Define DN threshold and modis pixel size for optical imagery\n",
-    "    thresh = thresh; # might make this a DN ratio from 2 bands for more stable threshold later (less subject to seasonal variations, cloud effects, etc.)\n",
+    "    thresh = thresh; \n",
     "    u_thresh = thresh + 1000\n",
     "    l_thresh = thresh - 1000\n",
     "    pixelarea = pixelwidth*pixelheight; # in km2\n",
@@ -451,9 +450,9 @@
     "#     '''Calculates polynya area by type (east [e], west [w], mid [m], other [o]) and total [tot].\n",
     "#     This fct is based on radius search area from lat,lon point\n",
     "    \n",
-    "#     This version uses xarray instead od pd.Dataframe to make more effcicient'''\n",
+    "#     This version uses xarray instead of pd.Dataframe to make more efficient'''\n",
     "\n",
-    "#     # distance (radius) from point method [not radius from line yet]\n",
+    "#     # distance (radius) from point method \n",
     "#     # convert lat, lon to radians\n",
     "#     # x, y center points polynya\n",
     "#     lat_w = westpoint[0]; lon_w = westpoint[1]; # west polynya center lat, lon\n",
